--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   width: 320px;
   margin-left: 0;
   margin-right: 0;
+  margin-top: 30px;
   border: 1px solid gray;
   border-radius: 10px;
   padding:15px;
